--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "my_blog",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "core-js": "^3.3.2",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-router": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
-    "vue-template-compiler": "^2.6.10"
-  }
+	"name": "my_blog",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve --open",
+		"build": "vue-cli-service build"
+	},
+	"dependencies": {
+		"core-js": "^3.3.2",
+		"vue": "^2.6.10",
+		"vue-router": "^3.1.3",
+		"axios": "^0.19.0",
+		"vue-axios": "^2.1.5"
+	},
+	"devDependencies": {
+		"@vue/cli-plugin-babel": "^4.0.0",
+		"@vue/cli-plugin-router": "^4.0.0",
+		"@vue/cli-service": "^4.0.0",
+		"vue-template-compiler": "^2.6.10"
+	}
 }
